--- a/app/views/data_items/input.erb
+++ b/app/views/data_items/input.erb
@@ -6,13 +6,15 @@
       <%= form_for data_item, url: data_items_path, method: :post do |f| %>
         <div class="form-group mt-4">
           <%= f.label 'File Indentifier' %>
-          <%= f.text_field :file_name, placeholder: "Input indentifier", class: 'form-control' %>
+          <%= f.text_field :file_name, placeholder: "Input indentifier", class: 'form-control', id: 'identifier' %>
+          <span class="error hidden" id="input-error"></span>
         </div>
         <div class="form-group mt-4">
           <%= f.label :file, 'Choose CSV file' %>
           <%= f.file_field :file, class:"form-control-file", id:"fileUpload", accept:".csv", required: true %>
         </div>
-        <%= f.submit "Submit", class: "btn btn-primary custom mt-3" %>
+        <%= f.submit "Submit", class: "btn btn-primary custom mt-3", id: 'submit-btn'%>
       <% end %>
   </div>
 </div>
+<%= javascript_pack_tag 'input' %>
